Update logo link in index.html

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 </head>
 <body>
     <div class="header">
-        <a href="/AOP DT/DT/index.html"><img src="Logo Laurensia.png" alt="Logo Sekolah" class="logo"></a>
+        <a href="DT/index.html"><img src="Logo Laurensia.png" alt="Logo Sekolah" class="logo"></a>
         <h1>3 -Card Music Player - Vicky Jericho Rustiadi </h1>
         </div>
         <p class="description">Hai Namaku Vicky Jericho Rustiadi, absen 29 dan ini adalah AOP ICT Ku</p>
