--- a/DT/index.html
+++ b/DT/index.html
@@ -9,7 +9,7 @@
 <body>
     <!-- Cleora Gloria -->
     <div class="card-MVC">
-            <a href="../index.html"><img src="logo-laurensia.png" alt="Logo Sekolah"></a>
+            <a href="kandidat/index.html"><img src="logo-laurensia.png" alt="Logo Sekolah"></a>
             <h1>Pengisian NISN Siswa</h1>
             <form class="form-wrapper-mvc">
                 <label for="nisn">NISN</label>
@@ -19,3 +19,4 @@
         </div>
 </body>
 </html>
+
