--- a/DT/index.html
+++ b/DT/index.html
@@ -3,7 +3,7 @@
 
  <head>
     <title>Pengisian NISN Siswa</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="styles.css">
     <link rel="icon" href="logo-laurensia.png"/>
 </head>
 <body>
@@ -19,4 +19,5 @@
         </div>
 </body>
 </html>
+
 
